# P6-code

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Setup2  cmp.c  partitions.csv  partitions_encrypted.csv  prj.conf  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
ChessRest/: .gitignore  CMakeLists.txt
ChessRest/api_endpoint/: CMakeLists.txt
ChessRest/api_endpoint/include/: EndpointComponents.hpp  smakcontroller.hpp
ChessRest/api_endpoint/src/: main.cpp  smakcontroller.cpp
ChessRest/chessclientlib/: .gitignore  CMakeLists.txt
ChessRest/chessclientlib/include/: chesslib.hpp  clientlib.hpp  models.hpp
ChessRest/chessclientlib/include/dtos/: evalDTO.hpp  fenDTO.hpp  gameDTO.hpp  moveDTO.hpp
ChessRest/chessclientlib/src/: chesslib.cpp  clientlib.cpp
ChessRest/test/: CMakeLists.txt  GetFen.cpp  SerDe-GameDTO.cpp  SerDe-MoveDTO.cpp  chesstest.cpp
ChessRest/uci_ipc/: CMakeLists.txt
ChessRest/uci_ipc/include/: ipc.hpp  uci_commands.hpp
ChessRest/uci_ipc/src/: eval.cpp  evaluation.cpp  ipc.cpp  uci_commands.cpp
ansible/: ansible.cfg  requirements.yml
ansible/inventories/prod/: hosts.ini
ansible/inventories/prod/group_vars/: appserver.yml  authentik.yml  loadbalancer.yml
ansible/playbooks/: appserver.yml  authentik.yml  database.yml  loadbalancer.yml  ssh.yml  update.yml
ansible/roles/appserver/defaults/: main.yml
ansible/roles/appserver/handlers/: main.yml
ansible/roles/appserver/tasks/: dbendpoint.yml  main.yml  pgndpoint.yml  webinterface.yml
ansible/roles/appserver/templates/: pgndpoint.service  smakdbendpoint.service  webinterface.service
ansible/roles/authentik/defaults/: main.yml
ansible/roles/authentik/tasks/: main.yml
ansible/roles/database/defaults/: main.yml
ansible/roles/database/tasks/: main.yml
ansible/roles/database/templates/: Caddyfile.j2
ansible/roles/install/defaults/: main.yml
ansible/roles/install/tasks/: main.yml
ansible/roles/loadbalancer/defaults/: main.yml
ansible/roles/loadbalancer/handlers/: main.yml
ansible/roles/loadbalancer/tasks/: main.yml
ansible/roles/loadbalancer/templates/: Caddyfile.j2
ansible/roles/paultibbetts.caddy/: .ansible-lint  CHANGELOG.md  Makefile  README.md  pyproject.toml
ansible/roles/paultibbetts.caddy/.github/workflows/: release.yaml  test.yml
ansible/roles/paultibbetts.caddy/defaults/: main.yml
ansible/roles/paultibbetts.caddy/handlers/: main.yml
ansible/roles/paultibbetts.caddy/meta/: .galaxy_install_info  main.yml
ansible/roles/paultibbetts.caddy/molecule/caddyfile/: molecule.yml  verify.yml
ansible/roles/paultibbetts.caddy/molecule/cloudflare/: converge.yml  molecule.yml  verify.yml
ansible/roles/paultibbetts.caddy/molecule/debian/: molecule.yml  prepare.yml
ansible/roles/paultibbetts.caddy/molecule/default/: molecule.yml  verify.yml
ansible/roles/paultibbetts.caddy/molecule/ubuntu22_arm/: molecule.yml  verify.yml
ansible/roles/paultibbetts.caddy/tasks/: install.yaml  install_apt.yaml  install_download.yaml  main.yml  uninstall.yaml
ansible/roles/paultibbetts.caddy/templates/: 10-env.conf.j2  caddy.service.j2
ansible/roles/paultibbetts.caddy/tests/: test.yml
ansible/roles/paultibbetts.caddy/vars/: main.yml
ansible/roles/ssh/defaults/: main.yml
ansible/roles/ssh/tasks/: main.yml
ansible/roles/ssh/templates/: env.j2
ansible/roles/update/defaults/: main.yml
ansible/roles/update/tasks/: main.yml
boards/: esp32s3_devkitc_procpu.overlay
db-rest/: pom.xml
db-rest/src/main/java/dk/aau/group1/p5/chess/: ChessApplication.java
db-rest/src/main/java/dk/aau/group1/p5/chess/config/: SecurityConfig.java
db-rest/src/main/java/dk/aau/group1/p5/chess/model/: Board.java  Game.java  GameStateEnum.java  Move.java  MoveId.java  MoveTypeEnum.java  PiecesEnum.java  User.java
db-rest/src/main/java/dk/aau/group1/p5/chess/repository/: BoardRepository.java  GameRepository.java  MoveRepository.java  UserRepository.java
db-rest/src/main/java/dk/aau/group1/p5/chess/service/: BoardService.java  GameService.java  MoveService.java  UserService.java
db-rest/src/main/java/dk/aau/group1/p5/chess/web/: BoardController.java  GameController.java  GameNotFoundAdvice.java  GameNotFoundException.java  MoveController.java  UserController.java
db-rest/src/main/resources/: application.properties
db-rest/src/test/java/dk/aau/group1/p5/chess/: ChessApplicationTests.java
db-rest/src/test/java/dk/aau/group1/p5/chess/http/: HttpUserControllerTest.java
db-rest/src/test/java/dk/aau/group1/p5/chess/web/: UserControllerTest.java
main/: CMakeLists.txt  Kconfig.projbuild  main.c  smak_conn.c  smak_ota.c  smak_storage.c  smak_util.c  usb.c  version_softap.c
main/include/: smak_defines.h  smak_http_interface.h  smak_storage.h  smak_util.h  smak_util_private.h
main/proto/: smak.pb.c  smak.pb.h
newnewWebinterface/: Program.cs  appsettings.json  newnewWebinterface.csproj
newnewWebinterface/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Login.cshtml  Login.cshtml.cs  Logout.cshtml  Logout.cshtml.cs  Privacy.cshtml.cs  Register.cshtml  Register.cshtml.cs  SignedOut.cshtml  TokenDebug.cshtml  TokenDebug.cshtml.cs  TokenDebug.cshtml.cs.DISABLED  _ViewImports.cshtml
newnewWebinterface/Pages/Shared/: _Layout.cshtml
newnewWebinterface/Properties/: launchSettings.json
newnewWebinterface/wwwroot/js/: geteval.js
proto/: smak.pb.c  smak.pb.h  smak.proto
smakfirmware/esp32s3/: .gitignore  CurlWithOauth2.txt  espidf-env  partitions.csv  sdkconfig.old
smakfirmware/esp32s3/main/: idf_component.yml  smak_storage.c  version_softap.c
smakfirmware/esp32s3/main/include/: smak_ota.h
smakfirmware/esp32s3/main/proto/: smak.pb.h
smakfirmware/esp32s3/proto/: smak.proto
smakfirmware/stm32/: .clangd
smakfirmware/stm32/boards/: esp32s3_devkitc_procpu.overlay  nucleo_u5a5zj_q.overlay
smakfirmware/stm32/src/: fsm.h  model.c  model.h
src/: fsm.c  fsm.h  fsm_tests.c  main.c  model.c  model.h  smak.proto
webinterface/: .gitignore  build.sh  geteval.js  geteval.ts  index.html  packages.txt
